2010-07-27  David Reveman  <davidr@novell.com>

	* uielement.cpp (PreRender): Need to apply transform before
	calling cairo_mask.

	* uielement.cpp: Call GetCr only when necessary.

	* uielement.cpp (PreRender): It should not be necessary to call
	ApplyTransform in PreRender.

2010-07-27  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Now that the context is never null we need to make
	sure we return the correct top pointer.

2010-07-27  David Reveman  <davidr@novell.com>

	* src/grid.cpp:
	* src/grid.h:
	* src/runtime.cpp:
	* src/runtime.h:
	* src/stylus.cpp:
	* src/stylus.h:
	* src/uielement.cpp:
	* src/uielement.h: Use Stack instead of List for ContextNodes.

	* list.h:
	* list.cpp: Add simple Stack class.

	* uielement.cpp (PostRender): When possible use
	ContextNode::GetTarget instead of ContextNode::GetCr.

	* runtime.h:
	* runtime.cpp: Add GetTarget method to ContextNode class.

	* uielement.cpp (PostRender):
	* runtime.h:
	* runtime.cpp: ContextNode should own the cairo context and
	any target surfaces implicitly created.

	* uielement.cpp (PreRender): Only save state and render clip
	path when clip is present.

2010-07-27  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Mark whether or not to use the ignorable element.

2010-07-27  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: We dont need the file/string anymore
	when creating a xaml loader.

2010-07-26  David Reveman  <davidr@novell.com>

	* uielement.cpp (PreRender): Use lazy intermediate target
	allocation. Make sure clip isn't bigger than perspective
	transform render bounds.

	* runtime.h:
	* runtime.cpp: Add lazy target allocation to ContextNode. If
	a ContextNode is created from some extents instead of from a
	cairo context, the target surface and cairo context is not
	allocated until GetCr is called.

	* uielement.cpp: Use context list instead of cairo_push/pop group
	for local opacity and opacity mask. Set clip and transform
	in PreRender instead of PostRender.

	* uielement.h: